fix: apply minor rewording

--- a/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
@@ -135,11 +135,11 @@ PULUMI_ACCESS_TOKEN=pul-xyzabc123
 Note that, when using the Pulumi Service, it's recommended we remove the [`PULUMI_SECRETS_PROVIDER`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L6) and [`PULUMI_CONFIG_PASSPHRASE`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L10) environment variables. Essentially, these variable instruct Pulumi CLI which secrets provider we want to use, and since Pulumi Service has its own built-in one, we don't need these anymore.
 
 :::note
-By default, the mentioned [`PULUMI_SECRETS_PROVIDER`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L6) and [`PULUMI_CONFIG_PASSPHRASE`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L10)  are, respectively, set to `passphrase` and a random string, in the [`.env`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L4-L10) file, located in your project root.
+By default, via the [`.env`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L4-L10) file located in your project root, the mentioned [`PULUMI_SECRETS_PROVIDER`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L6) and [`PULUMI_CONFIG_PASSPHRASE`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/cwp-template-aws/template/example.env#L10) environment variables are set to `passphrase` and a random string, respectively.
 :::
 
 :::info
-Learn more about secrets and secret providers in [Pulumi's official documentation](https://www.pulumi.com/docs/intro/concepts/secrets/).
+Learn more about secrets and secrets providers in [Pulumi's official documentation](https://www.pulumi.com/docs/intro/concepts/secrets/).
 :::
 
 ### What To Use
