wip: add additional note about non-first deployments

--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
@@ -174,7 +174,7 @@ export default () => {
     cognitoUserPool: {
       id: cognito.userPool.id,
       domain: cognito.getUserPoolDomain(),
-    },
+    }
   };
 };
 ```
@@ -201,7 +201,11 @@ If not, you can either start a new watch session, or simply deploy the changes v
   src={cloudInfraDeploy}
 />
 
-Both approaches will ensure the new cloud infrastructure resources are deployed and are ready to be used.
+:::tip
+As seen in the screenshot above, except all of the cloud infrastructure resources-related changes, in the **Outputs** section, we can also see the updated stack output.
+:::
+
+Ultimately, both approaches will ensure the new cloud infrastructure resources are deployed and are ready to be used.
 
 ## Final Result
 
