--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
@@ -155,7 +155,9 @@ Notice the `--no-build` argument at the end of the command. With it, we've instr
   src={cloudInfraDeploy}
 />
 
-TODO - DEPLOYMENTS ? 2 DEPLOYS NEEDED?
+:::tip
+As seen in the screenshot above, except all of the cloud infrastructure resources-related changes, in the **Outputs** section, we can also see the updated stack output.
+:::
 
 ## Final Result
 
