--- a/docs/how-to-guides/upgrade-webiny.mdx
+++ b/docs/how-to-guides/upgrade-webiny.mdx
@@ -52,21 +52,21 @@ Once that's done, you can deploy your project.
 
 ## FAQ
 
-**While upgrading, can I skip versions, for example from 5.5.0 to 5.10.0?**
+#### While upgrading, can I skip versions, for example from 5.5.0 to 5.10.0?
 
 You should never skip versions as each upgrade can contain additional manual steps that need to be taken. The steps will always be listed in upgrade guides.
 
-**Once upgraded, do we need to re-deploy the Webiny project in order to see the changes?**
+#### Once upgraded, do we need to re-deploy the Webiny project in order to see the changes?
 
 Yes, once you've completed the upgrade steps, in order to actually see the new features and fixes online, you need to re-deploy you project. Which project applications you need to re-deploy? It depends on the released fixes and features, but the easiest approach would be just to deploy the entire project, using the [`yarn webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command) command.
 
 Additionally, before you re-deploy the changes into the production environment, it's recommended that you re-deploy the changes into one of your test or preview environments first.
 
-**Is it possible to upgrade Webiny from v4 to v5?**
+#### Is it possible to upgrade Webiny from v4 to v5?
 
 Differences between these two versions are so vast that it's simply impossible to do the upgrade. If you're interested in migrating your existing project to v5, unfortunately, you will have to recreate your existing content in a new v5 project, either manually, or by writing your own custom migration scripts.
 
-**How can we check what's the version of Webiny we're currently at?**
+#### How can we check what's the version of Webiny we're currently at?
 
 In your terminal of choice and in your project root, run the following command:
 
